--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,14 @@
 body{
     margin:0px;
 }
+.encabezado{
+    border: 1px solid grey;
+    background-color: khaki;
+    padding: 20px;
+    box-shadow: 10px 10px 10px black;
+    text-align: center;
+
+}
 
 .main{
     margin: 0 auto;
