--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,27 +3,28 @@ body{
 }
 .encabezado{
     border: 1px solid grey;
-    background-color: khaki;
+    background-color:violet;
     padding: 20px;
     box-shadow: 10px 10px 10px black;
     text-align: center;
+
 
 }
 
 .main{
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
     border: 2px solid gray;
     padding: 20px;
-    background-color: cyan;
+    background-color:navajowhite;
 
 }
 h2{
     font-style: italic;
     margin-top: 0px;
-    color: darkred;
+    color: white;
 }
 h3{
     font-size: large;
-    font-style: oblique;
+    font-style: blue;
 }
