--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,26 @@
 body{
     margin:0px;
+
 }
 .encabezado{
-    border: 1px solid grey;
-    background-color: khaki;
-    padding: 20px;
-    box-shadow: 10px 10px 10px black;
+    border: 1px solid black;
+    background-color: lightblue;
+    padding: 30px;
+    box-shadow: 10px 10px 10px dimgray;
     text-align: center;
+    font-weight: bold;
+    font-size: larger;
 
 }
 
 .main{
     margin: 0 auto;
-    width: 80%;
-    border: 2px solid gray;
+    width: 60%;
+    border: 2px solid black;
     padding: 20px;
-    background-color: cyan;
+    background-color:moccasin;
 
 }
-h2{
-    font-style: italic;
-    margin-top: 0px;
-    color: darkred;
+h3{
+    color:chocolate;
 }
