--- a/css/estilos.css
+++ b/css/estilos.css
@@ -58,8 +58,17 @@ ul li{
     margin: 0 auto;
     background-color:rgb(252, 237, 213);
     margin: 0px 20px;
-    padding: 0px 10px;
 
+
+}
+.main figure{
+    margin: 0 auto;
+    margin-left: 20%;
+}
+.container-main-img img{
+    width: 600px;
+
+    
 }
 .main h1{
     margin: 0px;
