--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,13 +4,15 @@ body{
 
 }
 .header{
-    background-color: violet;
+    /* background-color: violet; */
     box-shadow: 10px 10px 10px rgb(247, 176, 247);
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
     height: 90px;
+    width: 90%;
+    background-color: deeppink;
 }
 .header figure{
     width: 150px;
@@ -21,6 +23,9 @@ body{
 }
 .header figure img{
     height: inherit;
+}
+.encabezado h2{
+    color: firebrick;
 }
 .menu{
     height: inherit;
