--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,6 +11,8 @@ body{
     align-items: center;
     margin-bottom: 10px;
     height: 90px;
+    width: 70%;
+    background-color: green;
 }
 .header figure{
     width: 150px;
@@ -18,6 +20,9 @@ body{
     margin: 0;
     margin-left: 20px;
     padding: 0;
+}
+.encabezado h2{
+    color: indigo;
 }
 .header figure img{
     height: inherit;
@@ -76,7 +81,7 @@ ul li{
     color: rgba(11, 148, 125, 0.938);
 }
 h3{
-    color:chocolate;
+    color: lawngreen;
 }
 .footer{
     background-color: rgb(116, 28, 57);
